# up-and-down-btc15-bot

./: .gitignore  CLAUDE.md  config.example.yaml  pyproject.toml
bot/: config.py  db.py  db_events.py  main.py
bot/engine/: bot_loop.py  market_manager.py  pnl_tracker.py  strategy_engine.py  ta_reader.py
bot/models/: bot_state.py  order.py  strategy_state.py  ta_signal.py
bot/order_tracker/: dryrun_tracker.py  interface.py  live_tracker.py
bot/strategies/: base.py  early_entry.py  late_scalp.py  mid_game.py
bot/web/: routes.py
bot/web/static/: app.js  index.html  style.css
docs/: specs.md
tests/: conftest.py  test_bot_loop.py  test_config.py  test_db.py  test_dryrun_tracker.py  test_early_entry.py  test_late_scalp.py  test_mid_game.py  test_strategy_engine.py  test_ta_reader.py
tests/fixtures/: sample_signal.json
